--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -11,6 +11,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes using | and -
+unbind '%'
+unbind '"'
 bind | split-window -h
 bind - split-window -v
 
