feat(neovim): change to tmux-sessionizer

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -37,8 +37,8 @@ setw -g pane-base-index 1
 set-option -g renumber-windows on
 
 # tmux-sessionizer
-if-shell -b 'type tms >/dev/null' {
-  bind-key -r f run-shell "tmux neww tms"
+if-shell -b 'type tmux-sessionizer >/dev/null' {
+  bind-key -r f run-shell "tmux neww tmux-sessionizer"
 }
 
 # tpm and tmux plugins
